// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Kusama Accounts > \`burn\` > burning funds from account works > events when Alice self-burns funds 1`] = `
[
  {
    "data": {
      "amount": "(rounded 170000000000)",
      "who": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Burned",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for first issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > \`force_adjust_total_issuance\` > successful adjustments increase and decrease total issuance > events for second issuance change 1`] = `
[
  {
    "data": {
      "new_": "(number)",
      "old": "(number)",
    },
    "method": "TotalIssuanceForced",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > \`force_transfer\` > force transferring origin below ED can kill it > events of \`force_transfer\` from Alice to Bob 1`] = `
[
  {
    "data": {
      "account": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "amount": "(rounded 110000000)",
    },
    "method": "DustLost",
    "section": "balances",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "freeBalance": "(rounded 330000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > \`transfer_all\` > account with reserves cannot transfer all funds > events when Alice with reserve transfers all to Bob 1`] = `
[
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "freeBalance": "(rounded 33000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > \`transfer_all\` > transfer all with keepAlive false kills sender > events when Alice transfers all to Bob with \`keepAlive = false\` 1`] = `
[
  {
    "data": {
      "account": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "KilledAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "freeBalance": "(rounded 33000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > \`transfer_all\` > transfer all with keepAlive true leaves 1 ED > events when Alice transfers all to Bob with \`keepAlive = true\` 1`] = `
[
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "freeBalance": "(rounded 32000000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via multisig creation > deposit action success events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 670000000000)",
      "who": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Reserved",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > currency tests > liquidity restriction error: funds locked via manual reserve and manual lock, triggered via proxy addition > deposit action success events 1`] = `
[
  {
    "data": {
      "amount": "(rounded 670000000000)",
      "who": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
    },
    "method": "Reserved",
    "section": "balances",
  },
]
`;

exports[`Kusama Accounts > transfer_allow_death > transfer of some funds does not kill sender account > events when Alice transfers 1 ED to Bob with sufficient balance 1`] = `
[
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
    },
    "method": "NewAccount",
    "section": "system",
  },
  {
    "data": {
      "account": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "freeBalance": "(rounded 330000000)",
    },
    "method": "Endowed",
    "section": "balances",
  },
]
`;
